etc/tests/fuzz/errors/attr/pure-effects-conflict.nshape
shape attr-pure-effects-conflict {
  family "compiler-errors/attr"
  generator "error"
  features ["error", "attr", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "conflicting attributes '@pure' and '@effects(...)'"
  source ny <<'NY'
use std.core

@pure
@effects(io)
fn f() int {
   1
}

print(f())
NY
}
